# snackabra-pylib

./: .gitignore  README.md  README.rst  requirements.txt  setup.cfg
src/snackabra/: crypto.py
src/snackabra.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
