[metadata]
name = snackabra
version = 0.4.6
author = Peter Magnusson
author_email = snackabra@protonmail.com
description = Snackabra Python Library (Utilities)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/snackabra/snackabra-pylib
project_urls =
    Bug Tracker = https://github.com/snackabra/snackabra-pylib/issues
license_files = LICENSE.md
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPL-3.0-only License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    cryptography
    jwcrypto

[options.packages.find]
where = src

